# uma-lang

./: Cargo.toml  README.md  grammar.txt  input.c  main.uma  thing.uma
examples/: fib.uma  matmul.uma
src/: core.rs  error.rs  main.rs  parser.rs  pretty.rs  scanner.rs
tree-sitter-uma/: CMakeLists.txt  Cargo.toml  Makefile  Package.swift  binding.gyp  go.mod  grammar.js  package.json  pyproject.toml  setup.py  tree-sitter  tree-sitter.json
tree-sitter-uma/bindings/c/: tree-sitter-uma.pc.in
tree-sitter-uma/bindings/go/: binding.go  binding_test.go
tree-sitter-uma/bindings/node/: binding.cc  index.js
tree-sitter-uma/bindings/python/tests/: test_binding.py
tree-sitter-uma/bindings/python/tree_sitter_uma/: __init__.py  (+1 more)
tree-sitter-uma/bindings/rust/: build.rs  lib.rs
tree-sitter-uma/queries/: highlights.scm  locals.scm
tree-sitter-uma/src/: grammar.json  node-types.json  parser.c
uma/: Cargo.toml  grammar.txt
uma-core/: Cargo.toml
uma-core/src/: core.rs  executor.rs  fmt.rs  lib.rs  parser.rs  scanner.rs  semantic.rs  util.rs
uma-core/src/interpreter/: builtins.rs  core.rs  mod.rs  scope.rs
uma-core/src/parser/: ast.rs  error.rs  mod.rs
uma-core/src/scanner/: mod.rs  token.rs
uma-core/src/semantic/: mod.rs
uma/src/: main.rs  print.rs
umacc/: Cargo.toml  grammar.txt  input.c  new_input.c
umacc/src/: main.rs  print.rs
umals/: Cargo.toml
umals/src/: jsonrpc.rs  main.rs  server.rs  structs.rs
vscode-uma/: README.md  package-lock.json  package.json  tsconfig.json
vscode-uma/src/: extension.ts
vscode-uma/syntaxes/: uma.tmLanguage.json
(+2 files in other folders)
