[package]
name = "umacc"
version = "0.1.0"
edition = "2024"

[dependencies]
uma-core = { path = "../uma-core" }
anyhow = "1.0.102"
clap = { version = "4.6.0", features = ["derive"] }
crossterm = "0.29.0"
derive_more = { version = "2.1.1", features = ["display", "error", "is_variant"] }
kinded = "0.5.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
serde_repr = "0.1.20"
